test/error/unused_variable.colgm
func test_param(a: i32, b: i64, c: const i8*) {}

func test_local() {
    var a: i32 = 0;
    var b: i64 = 0;
    var c: const i8* = nil;
}

func main() -> i32 {
    test_param(1, 2, "3");
    test_local();
    return 0;
}